--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
 
     <string name="pref_key_reminder" translatable="false">key_reminder</string>
     <string name="pref_key_alarm" translatable="false">key_alarm</string>
+    <string name="danger_level">Danger level</string>
 </resources>
